--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-minimal
 
+logo: stationkeeperlogo2.png
+
 title: StationKeeper
 description: A companion Discord bot for Elite: Dangerous by Pr0x1mas that uses the EDDB API.
 
